# teknisa-migration

./: .env.example  .gitignore  Especificação - Migração de Dados ERP-HCM.docx  Migracao_Dados_ERP_HCM_Teknisa.docx  alembic.ini  detalhamento de informações da planilha.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 06d5b9d23be9_seed_template_estrutura.py  157982505200_seed_template_ficha_financeira.py  1913c658c4eb_catalogo_pre_requisito_externo_e_grafo_.py  1d7a77f2492c_seed_template_vinculo_completo.py  23bd8d788a9b_seed_organizacoes.py  3441380a317b_seed_template_esocial_s2206.py  6b13ec762a4c_seed_template_esocial_s1030.py  6c31b8f0babc_seed_template_alteracao_salarial.py  6df3d7f10a14_consolidar_tipos_migracao_esocial.py  6f30b1f0ac52_seed_template_esocial_s1000.py  73f032179673_seed_template_esocial_s2230.py  7ccea5018696_seed_template_escala.py  8aec5c1396da_catalogo_destino_ddl.py  93d7c22f0d66_xml_registro_xpath_em_template.py  (+23 more)
app/: __init__.py  main.py
tests/: conftest.py  test_auth.py  test_conversions.py  test_ddl_import.py  test_esocial_templates.py  test_estado_migracao.py  test_health.py  test_ingestion_xml.py  test_key_service.py  test_migracoes_lifecycle.py  test_migracoes_processamento.py  test_migracoes_validacao.py  test_script_generator.py  test_templates_agencias.py  test_templates_estrutura.py  test_templates_eventos.py  test_templates_ferias.py  test_templates_vinculo.py  test_tipos_migracao.py  test_transformation_engine.py  test_validation_engine.py  test_web_admin_crud.py  test_web_dashboard.py  test_web_migracao_tabs.py
(+142 files in other folders)
