[project]
name = "teknisa-migration-platform"
version = "0.1.0"
description = "Plataforma de Migração de Dados ERP/HCM — motor genérico orientado por metadados"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "oracledb>=2.5",
    "openpyxl>=3.1",
    "lxml>=5.3",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Sessão inteira compartilha um único event loop: o engine async (SQLAlchemy/asyncpg) é um
# singleton criado na importação de app.db.session, então recriar o loop por teste (padrão do
# pytest-asyncio) quebra o pool de conexões no Windows (ProactorEventLoop).
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
